fix: use correct value for align-items

--- a/src/components/travel-search-filter/travel-search-filter.module.css
+++ b/src/components/travel-search-filter/travel-search-filter.module.css
@@ -10,7 +10,7 @@
   list-style: none;
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: flex-start;
   gap: var(--spacings-xSmall);
 }
 
